// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`builders flow createTypeAnnotationBasedOnTypeof bigint 1`] = `
Object {
  "type": "AnyTypeAnnotation",
}
`;

exports[`builders flow createTypeAnnotationBasedOnTypeof function 1`] = `
Object {
  "id": Object {
    "decorators": null,
    "name": "Function",
    "optional": null,
    "type": "Identifier",
    "typeAnnotation": null,
  },
  "type": "GenericTypeAnnotation",
  "typeParameters": null,
}
`;

exports[`builders flow createTypeAnnotationBasedOnTypeof number 1`] = `
Object {
  "type": "NumberTypeAnnotation",
}
`;

exports[`builders flow createTypeAnnotationBasedOnTypeof object 1`] = `
Object {
  "id": Object {
    "decorators": null,
    "name": "Object",
    "optional": null,
    "type": "Identifier",
    "typeAnnotation": null,
  },
  "type": "GenericTypeAnnotation",
  "typeParameters": null,
}
`;

exports[`builders flow createTypeAnnotationBasedOnTypeof string 1`] = `
Object {
  "type": "StringTypeAnnotation",
}
`;

exports[`builders flow createTypeAnnotationBasedOnTypeof symbol 1`] = `
Object {
  "id": Object {
    "decorators": null,
    "name": "Symbol",
    "optional": null,
    "type": "Identifier",
    "typeAnnotation": null,
  },
  "type": "GenericTypeAnnotation",
  "typeParameters": null,
}
`;

exports[`builders flow createTypeAnnotationBasedOnTypeof true 1`] = `
Object {
  "type": "BooleanTypeAnnotation",
}
`;

exports[`builders flow createTypeAnnotationBasedOnTypeof undefined 1`] = `
Object {
  "type": "VoidTypeAnnotation",
}
`;
